--- a/features.html
+++ b/features.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <main>
-        <p>Lorem ipsum...</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem consectetur laboriosam debitis voluptas dignissimos vel. Ducimus unde explicabo voluptate ratione alias, itaque doloremque nulla autem esse quisquam voluptatum veritatis consequatur?</p>
     </main>
+    <footer>footer</footer>
 </body>
 </html>
